...
        // Map
        Card(
            modifier = Modifier.testTag("mapContainer").fillMaxWidth().aspectRatio(8f / 9f),
            shape = MaterialTheme.shapes.large,
            elevation = CardDefaults.cardElevation(defaultElevation = 4.dp)) {
              GoogleMap(
                  modifier = Modifier.fillMaxSize().testTag("googleMap"),
                  cameraPositionState = cameraPositionState,
                  properties = MapProperties(isMyLocationEnabled = userLocation != null),
                  onMapLoaded = {
                    onMapReady(true)
                    Log.e("MapPickerBox", "Map loaded")
                  },
...

        // Confirm button
        Button(
            onClick = {
              onLocationSelected(selectedPosition.latitude to selectedPosition.longitude)
            },
            modifier = Modifier.testTag("confirmLocation").fillMaxWidth(),
            enabled = selectedPosition.latitude != 0.0 || selectedPosition.longitude != 0.0,
            colors =
                ButtonDefaults.buttonColors(
                    containerColor = MaterialTheme.colorScheme.primary,
                    disabledContainerColor = MaterialTheme.colorScheme.surfaceVariant)) {
              Icon(
...
