...
        },
        valueRange = 5f..50f,
        colors =
            SliderDefaults.colors(
                thumbColor = MaterialTheme.colorScheme.secondaryContainer,
                activeTrackColor = MaterialTheme.colorScheme.secondaryContainer),
        modifier = Modifier.testTag("priceRangeSlider"))
  }
}

